refactor: Spring Boot 3.x best practices
Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.java.spring.boot3.SpringBoot3BestPractices?organizationId=NWNiM2EzZTUtODQ5MS00NTQxLTliZTgtNzgyYjY4NzVlOTJl

Co-authored-by: Moderne <team@moderne.io>