@@ -440,7 +440,7 @@ public class WorkflowModel {
     public String toShortString() {
         String name = workflowDefinition != null ? workflowDefinition.getName() : null;
         Integer version = workflowDefinition != null ? workflowDefinition.getVersion() : null;
-        return String.format("%s.%s/%s", name, version, workflowId);
+        return "%s.%s/%s".formatted(name, version, workflowId);
     }
 
     public TaskModel getTaskByRefName(String refName) {
@@ -494,7 +494,7 @@ public class WorkflowModel {
     public String toString() {
         String name = workflowDefinition != null ? workflowDefinition.getName() : null;
         Integer version = workflowDefinition != null ? workflowDefinition.getVersion() : null;
-        return String.format("%s.%s/%s.%s", name, version, workflowId, status);
+        return "%s.%s/%s.%s".formatted(name, version, workflowId, status);
     }
 
     @Override
