@@ -18,10 +18,8 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
 import com.netflix.conductor.common.metadata.tasks.TaskType;
@@ -35,7 +33,8 @@ import com.netflix.conductor.model.WorkflowModel;
 
 import static com.netflix.conductor.common.metadata.tasks.TaskType.TASK_TYPE_FORK;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class ForkJoinTaskMapperTest {
 
@@ -43,9 +42,7 @@ public class ForkJoinTaskMapperTest {
     private ForkJoinTaskMapper forkJoinTaskMapper;
     private IDGenerator idGenerator;
 
-    @Rule public ExpectedException expectedException = ExpectedException.none();
-
-    @Before
+    @BeforeEach
     public void setUp() {
         deciderService = Mockito.mock(DeciderService.class);
         forkJoinTaskMapper = new ForkJoinTaskMapper();
@@ -130,87 +127,86 @@ public class ForkJoinTaskMapperTest {
         List<TaskModel> mappedTasks = forkJoinTaskMapper.getMappedTasks(taskMapperContext);
 
         assertEquals(3, mappedTasks.size());
-        assertEquals(TASK_TYPE_FORK, mappedTasks.get(0).getTaskType());
+        assertEquals(TASK_TYPE_FORK, mappedTasks.getFirst().getTaskType());
     }
 
     @Test
     public void getMappedTasksException() {
+        Throwable exception = assertThrows(TerminateWorkflowException.class, () -> {
 
-        WorkflowDef def = new WorkflowDef();
-        def.setName("FORK_JOIN_WF");
-        def.setDescription(def.getName());
-        def.setVersion(1);
-        def.setInputParameters(Arrays.asList("param1", "param2"));
+            WorkflowDef def = new WorkflowDef();
+            def.setName("FORK_JOIN_WF");
+            def.setDescription(def.getName());
+            def.setVersion(1);
+            def.setInputParameters(Arrays.asList("param1", "param2"));
 
-        WorkflowTask forkTask = new WorkflowTask();
-        forkTask.setType(TaskType.FORK_JOIN.name());
-        forkTask.setTaskReferenceName("forktask");
+            WorkflowTask forkTask = new WorkflowTask();
+            forkTask.setType(TaskType.FORK_JOIN.name());
+            forkTask.setTaskReferenceName("forktask");
 
-        WorkflowTask wft1 = new WorkflowTask();
-        wft1.setName("junit_task_1");
-        Map<String, Object> ip1 = new HashMap<>();
-        ip1.put("p1", "workflow.input.param1");
-        ip1.put("p2", "workflow.input.param2");
-        wft1.setInputParameters(ip1);
-        wft1.setTaskReferenceName("t1");
+            WorkflowTask wft1 = new WorkflowTask();
+            wft1.setName("junit_task_1");
+            Map<String, Object> ip1 = new HashMap<>();
+            ip1.put("p1", "workflow.input.param1");
+            ip1.put("p2", "workflow.input.param2");
+            wft1.setInputParameters(ip1);
+            wft1.setTaskReferenceName("t1");
 
-        WorkflowTask wft3 = new WorkflowTask();
-        wft3.setName("junit_task_3");
-        wft3.setInputParameters(ip1);
-        wft3.setTaskReferenceName("t3");
+            WorkflowTask wft3 = new WorkflowTask();
+            wft3.setName("junit_task_3");
+            wft3.setInputParameters(ip1);
+            wft3.setTaskReferenceName("t3");
 
-        WorkflowTask wft2 = new WorkflowTask();
-        wft2.setName("junit_task_2");
-        Map<String, Object> ip2 = new HashMap<>();
-        ip2.put("tp1", "workflow.input.param1");
-        wft2.setInputParameters(ip2);
-        wft2.setTaskReferenceName("t2");
+            WorkflowTask wft2 = new WorkflowTask();
+            wft2.setName("junit_task_2");
+            Map<String, Object> ip2 = new HashMap<>();
+            ip2.put("tp1", "workflow.input.param1");
+            wft2.setInputParameters(ip2);
+            wft2.setTaskReferenceName("t2");
 
-        WorkflowTask wft4 = new WorkflowTask();
-        wft4.setName("junit_task_4");
-        wft4.setInputParameters(ip2);
-        wft4.setTaskReferenceName("t4");
+            WorkflowTask wft4 = new WorkflowTask();
+            wft4.setName("junit_task_4");
+            wft4.setInputParameters(ip2);
+            wft4.setTaskReferenceName("t4");
 
-        forkTask.getForkTasks().add(Arrays.asList(wft1, wft3));
-        forkTask.getForkTasks().add(Collections.singletonList(wft2));
+            forkTask.getForkTasks().add(Arrays.asList(wft1, wft3));
+            forkTask.getForkTasks().add(Collections.singletonList(wft2));
 
-        def.getTasks().add(forkTask);
+            def.getTasks().add(forkTask);
 
-        WorkflowTask join = new WorkflowTask();
-        join.setType(TaskType.JOIN.name());
-        join.setTaskReferenceName("forktask_join");
-        join.setJoinOn(Arrays.asList("t3", "t2"));
+            WorkflowTask join = new WorkflowTask();
+            join.setType(TaskType.JOIN.name());
+            join.setTaskReferenceName("forktask_join");
+            join.setJoinOn(Arrays.asList("t3", "t2"));
 
-        def.getTasks().add(wft4);
+            def.getTasks().add(wft4);
 
-        WorkflowModel workflow = new WorkflowModel();
-        workflow.setWorkflowDefinition(def);
+            WorkflowModel workflow = new WorkflowModel();
+            workflow.setWorkflowDefinition(def);
 
-        TaskModel task1 = new TaskModel();
-        task1.setReferenceTaskName(wft1.getTaskReferenceName());
+            TaskModel task1 = new TaskModel();
+            task1.setReferenceTaskName(wft1.getTaskReferenceName());
 
-        TaskModel task3 = new TaskModel();
-        task3.setReferenceTaskName(wft3.getTaskReferenceName());
+            TaskModel task3 = new TaskModel();
+            task3.setReferenceTaskName(wft3.getTaskReferenceName());
 
-        Mockito.when(deciderService.getTasksToBeScheduled(workflow, wft1, 0))
-                .thenReturn(Collections.singletonList(task1));
-        Mockito.when(deciderService.getTasksToBeScheduled(workflow, wft2, 0))
-                .thenReturn(Collections.singletonList(task3));
+            Mockito.when(deciderService.getTasksToBeScheduled(workflow, wft1, 0))
+                    .thenReturn(Collections.singletonList(task1));
+            Mockito.when(deciderService.getTasksToBeScheduled(workflow, wft2, 0))
+                    .thenReturn(Collections.singletonList(task3));
 
-        String taskId = idGenerator.generate();
+            String taskId = idGenerator.generate();
 
-        TaskMapperContext taskMapperContext =
-                TaskMapperContext.newBuilder()
-                        .withWorkflowModel(workflow)
-                        .withWorkflowTask(forkTask)
-                        .withRetryCount(0)
-                        .withTaskId(taskId)
-                        .withDeciderService(deciderService)
-                        .build();
-
-        expectedException.expect(TerminateWorkflowException.class);
-        expectedException.expectMessage(
-                "Fork task definition is not followed by a join task.  Check the blueprint");
-        forkJoinTaskMapper.getMappedTasks(taskMapperContext);
+            TaskMapperContext taskMapperContext =
+                    TaskMapperContext.newBuilder()
+                            .withWorkflowModel(workflow)
+                            .withWorkflowTask(forkTask)
+                            .withRetryCount(0)
+                            .withTaskId(taskId)
+                            .withDeciderService(deciderService)
+                            .build();
+            forkJoinTaskMapper.getMappedTasks(taskMapperContext);
+        });
+        assertTrue(exception.getMessage().contains("Fork task definition is not followed by a join task.  Check the blueprint"));
     }
 }
