@@ -16,8 +16,8 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import com.netflix.conductor.common.metadata.tasks.TaskDef;
 import com.netflix.conductor.common.metadata.tasks.TaskType;
@@ -29,8 +29,9 @@ import com.netflix.conductor.dao.MetadataDAO;
 import com.netflix.conductor.model.TaskModel;
 import com.netflix.conductor.model.WorkflowModel;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+
 import static org.mockito.Mockito.mock;
 
 public class JsonJQTransformTaskMapperTest {
@@ -39,7 +40,7 @@ public class JsonJQTransformTaskMapperTest {
     private ParametersUtils parametersUtils;
     private MetadataDAO metadataDAO;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         parametersUtils = mock(ParametersUtils.class);
         metadataDAO = mock(MetadataDAO.class);
@@ -82,7 +83,7 @@ public class JsonJQTransformTaskMapperTest {
 
         assertEquals(1, mappedTasks.size());
         assertNotNull(mappedTasks);
-        assertEquals(TaskType.JSON_JQ_TRANSFORM.name(), mappedTasks.get(0).getTaskType());
+        assertEquals(TaskType.JSON_JQ_TRANSFORM.name(), mappedTasks.getFirst().getTaskType());
     }
 
     @Test
@@ -119,6 +120,6 @@ public class JsonJQTransformTaskMapperTest {
 
         assertEquals(1, mappedTasks.size());
         assertNotNull(mappedTasks);
-        assertEquals(TaskType.JSON_JQ_TRANSFORM.name(), mappedTasks.get(0).getTaskType());
+        assertEquals(TaskType.JSON_JQ_TRANSFORM.name(), mappedTasks.getFirst().getTaskType());
     }
 }
