@@ -24,8 +24,6 @@ import java.util.TimeZone;
 import java.util.UUID;
 import java.util.function.Supplier;
 
-import org.junit.Test;
-
 import com.netflix.conductor.common.metadata.events.EventExecution;
 import com.netflix.conductor.common.metadata.events.EventHandler;
 import com.netflix.conductor.common.metadata.tasks.TaskExecLog;
@@ -37,8 +35,9 @@ import com.netflix.conductor.es6.utils.TestUtils;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.google.common.collect.ImmutableMap;
+import org.junit.jupiter.api.Test;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
 
@@ -74,19 +73,19 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
         String eventIndex =
                 INDEX_PREFIX + "_" + EVENT_DOC_TYPE + "_" + SIMPLE_DATE_FORMAT.format(new Date());
 
-        assertTrue("Index 'conductor_workflow' should exist", indexExists("conductor_workflow"));
-        assertTrue("Index 'conductor_task' should exist", indexExists("conductor_task"));
+        assertTrue(indexExists("conductor_workflow"), "Index 'conductor_workflow' should exist");
+        assertTrue(indexExists("conductor_task"), "Index 'conductor_task' should exist");
 
-        assertTrue("Index '" + taskLogIndex + "' should exist", indexExists(taskLogIndex));
-        assertTrue("Index '" + messageIndex + "' should exist", indexExists(messageIndex));
-        assertTrue("Index '" + eventIndex + "' should exist", indexExists(eventIndex));
+        assertTrue(indexExists(taskLogIndex), "Index '" + taskLogIndex + "' should exist");
+        assertTrue(indexExists(messageIndex), "Index '" + messageIndex + "' should exist");
+        assertTrue(indexExists(eventIndex), "Index '" + eventIndex + "' should exist");
 
         assertTrue(
-                "Mapping 'workflow' for index 'conductor' should exist",
-                doesMappingExist(workflowIndex, WORKFLOW_DOC_TYPE));
+                doesMappingExist(workflowIndex, WORKFLOW_DOC_TYPE),
+                "Mapping 'workflow' for index 'conductor' should exist");
         assertTrue(
-                "Mapping 'task' for index 'conductor' should exist",
-                doesMappingExist(taskIndex, TASK_DOC_TYPE));
+                doesMappingExist(taskIndex, TASK_DOC_TYPE),
+                "Mapping 'task' for index 'conductor' should exist");
     }
 
     @Test
@@ -122,7 +121,7 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
 
         workflows = tryFindResults(() -> searchWorkflows(workflowSummary.getWorkflowId()), 0);
 
-        assertTrue("Workflow was not removed.", workflows.isEmpty());
+        assertTrue(workflows.isEmpty(), "Workflow was not removed.");
     }
 
     @Test
@@ -140,7 +139,7 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
 
         workflows = tryFindResults(() -> searchWorkflows(workflowSummary.getWorkflowId()), 0);
 
-        assertTrue("Workflow was not removed.", workflows.isEmpty());
+        assertTrue(workflows.isEmpty(), "Workflow was not removed.");
     }
 
     @Test
@@ -181,7 +180,7 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
 
         List<String> tasks = tryFindResults(() -> searchTasks(taskSummary));
 
-        assertEquals(taskSummary.getTaskId(), tasks.get(0));
+        assertEquals(taskSummary.getTaskId(), tasks.getFirst());
     }
 
     @Test
@@ -191,7 +190,7 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
 
         List<String> tasks = tryFindResults(() -> searchTasks(taskSummary));
 
-        assertEquals(taskSummary.getTaskId(), tasks.get(0));
+        assertEquals(taskSummary.getTaskId(), tasks.getFirst());
     }
 
     @Test
@@ -215,7 +214,7 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
 
         tasks = tryFindResults(() -> searchTasks(taskSummary), 0);
 
-        assertTrue("Task was not removed.", tasks.isEmpty());
+        assertTrue(tasks.isEmpty(), "Task was not removed.");
     }
 
     @Test
@@ -239,7 +238,7 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
 
         tasks = tryFindResults(() -> searchTasks(taskSummary), 0);
 
-        assertTrue("Task was not removed.", tasks.isEmpty());
+        assertTrue(tasks.isEmpty(), "Task was not removed.");
     }
 
     @Test
@@ -254,7 +253,7 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
 
         tasks = tryFindResults(() -> searchTasks(taskSummary), 0);
 
-        assertFalse("Task was removed.", tasks.isEmpty());
+        assertFalse(tasks.isEmpty(), "Task was removed.");
     }
 
     @Test
@@ -269,7 +268,7 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
 
         tasks = tryFindResults(() -> searchTasks(taskSummary), 0);
 
-        assertFalse("Task was removed.", tasks.isEmpty());
+        assertFalse(tasks.isEmpty(), "Task was removed.");
     }
 
     @Test
@@ -287,7 +286,7 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
 
         assertEquals(3, indexedLogs.size());
 
-        assertTrue("Not all logs was indexed", indexedLogs.containsAll(logs));
+        assertTrue(indexedLogs.containsAll(logs), "Not all logs was indexed");
     }
 
     @Test
@@ -305,7 +304,7 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
 
         assertEquals(3, indexedLogs.size());
 
-        assertTrue("Not all logs was indexed", indexedLogs.containsAll(logs));
+        assertTrue(indexedLogs.containsAll(logs), "Not all logs was indexed");
     }
 
     @Test
@@ -322,8 +321,8 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
         assertEquals(2, indexedMessages.size());
 
         assertTrue(
-                "Not all messages was indexed",
-                indexedMessages.containsAll(Arrays.asList(message1, message2)));
+                indexedMessages.containsAll(Arrays.asList(message1, message2)),
+                "Not all messages was indexed");
     }
 
     @Test
@@ -341,8 +340,8 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
         assertEquals(2, indexedExecutions.size());
 
         assertTrue(
-                "Not all event executions was indexed",
-                indexedExecutions.containsAll(Arrays.asList(execution1, execution2)));
+                indexedExecutions.containsAll(Arrays.asList(execution1, execution2)),
+                "Not all event executions was indexed");
     }
 
     @Test
@@ -360,8 +359,8 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
         assertEquals(2, indexedExecutions.size());
 
         assertTrue(
-                "Not all event executions was indexed",
-                indexedExecutions.containsAll(Arrays.asList(execution1, execution2)));
+                indexedExecutions.containsAll(Arrays.asList(execution1, execution2)),
+                "Not all event executions was indexed");
     }
 
     @Test
@@ -397,7 +396,7 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
         List<WorkflowSummary> workflows =
                 tryFindResults(() -> searchWorkflowSummary(workflowSummary.getWorkflowId()), 1);
         assertEquals(1, workflows.size());
-        assertEquals(workflowSummary, workflows.get(0));
+        assertEquals(workflowSummary, workflows.getFirst());
     }
 
     @Test
@@ -407,7 +406,7 @@ public class TestElasticSearchRestDAOV6 extends ElasticSearchRestDaoBaseTest {
 
         List<TaskSummary> tasks = tryFindResults(() -> searchTaskSummary(taskSummary));
         assertEquals(1, tasks.size());
-        assertEquals(taskSummary, tasks.get(0));
+        assertEquals(taskSummary, tasks.getFirst());
     }
 
     private long tryGetCount(Supplier<Long> countFunction, int resultsCount) {
