@@ -18,7 +18,7 @@ import java.util.*;
 import java.util.function.Supplier;
 
 import org.joda.time.DateTime;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import com.netflix.conductor.common.metadata.events.EventExecution;
 import com.netflix.conductor.common.metadata.events.EventHandler;
@@ -31,9 +31,7 @@ import com.netflix.conductor.es7.utils.TestUtils;
 
 import com.google.common.collect.ImmutableMap;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
 
@@ -69,22 +67,22 @@ public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
         String eventIndex =
                 INDEX_PREFIX + "_" + EVENT_DOC_TYPE + "_" + SIMPLE_DATE_FORMAT.format(new Date());
 
-        assertTrue("Index 'conductor_workflow' should exist", indexExists(workflowIndex));
-        assertTrue("Index 'conductor_task' should exist", indexExists(taskIndex));
+        assertTrue(indexExists(workflowIndex), "Index 'conductor_workflow' should exist");
+        assertTrue(indexExists(taskIndex), "Index 'conductor_task' should exist");
 
-        assertTrue("Index '" + taskLogIndex + "' should exist", indexExists(taskLogIndex));
-        assertTrue("Index '" + messageIndex + "' should exist", indexExists(messageIndex));
-        assertTrue("Index '" + eventIndex + "' should exist", indexExists(eventIndex));
+        assertTrue(indexExists(taskLogIndex), "Index '" + taskLogIndex + "' should exist");
+        assertTrue(indexExists(messageIndex), "Index '" + messageIndex + "' should exist");
+        assertTrue(indexExists(eventIndex), "Index '" + eventIndex + "' should exist");
 
         assertTrue(
-                "Index template for 'message' should exist",
-                indexDAO.doesResourceExist("/_template/template_" + MSG_DOC_TYPE));
+                indexDAO.doesResourceExist("/_template/template_" + MSG_DOC_TYPE),
+                "Index template for 'message' should exist");
         assertTrue(
-                "Index template for 'event' should exist",
-                indexDAO.doesResourceExist("/_template/template_" + EVENT_DOC_TYPE));
+                indexDAO.doesResourceExist("/_template/template_" + EVENT_DOC_TYPE),
+                "Index template for 'event' should exist");
         assertTrue(
-                "Index template for 'task_log' should exist",
-                indexDAO.doesResourceExist("/_template/template_" + LOG_DOC_TYPE));
+                indexDAO.doesResourceExist("/_template/template_" + LOG_DOC_TYPE),
+                "Index template for 'task_log' should exist");
     }
 
     @Test
@@ -120,7 +118,7 @@ public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
 
         workflows = tryFindResults(() -> searchWorkflows(workflowSummary.getWorkflowId()), 0);
 
-        assertTrue("Workflow was not removed.", workflows.isEmpty());
+        assertTrue(workflows.isEmpty(), "Workflow was not removed.");
     }
 
     @Test
@@ -138,7 +136,7 @@ public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
 
         workflows = tryFindResults(() -> searchWorkflows(workflowSummary.getWorkflowId()), 0);
 
-        assertTrue("Workflow was not removed.", workflows.isEmpty());
+        assertTrue(workflows.isEmpty(), "Workflow was not removed.");
     }
 
     @Test
@@ -179,7 +177,7 @@ public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
 
         List<String> tasks = tryFindResults(() -> searchTasks(taskSummary));
 
-        assertEquals(taskSummary.getTaskId(), tasks.get(0));
+        assertEquals(taskSummary.getTaskId(), tasks.getFirst());
     }
 
     @Test
@@ -189,7 +187,7 @@ public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
 
         List<String> tasks = tryFindResults(() -> searchTasks(taskSummary));
 
-        assertEquals(taskSummary.getTaskId(), tasks.get(0));
+        assertEquals(taskSummary.getTaskId(), tasks.getFirst());
     }
 
     @Test
@@ -213,7 +211,7 @@ public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
 
         tasks = tryFindResults(() -> searchTasks(taskSummary), 0);
 
-        assertTrue("Task was not removed.", tasks.isEmpty());
+        assertTrue(tasks.isEmpty(), "Task was not removed.");
     }
 
     @Test
@@ -237,7 +235,7 @@ public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
 
         tasks = tryFindResults(() -> searchTasks(taskSummary), 0);
 
-        assertTrue("Task was not removed.", tasks.isEmpty());
+        assertTrue(tasks.isEmpty(), "Task was not removed.");
     }
 
     @Test
@@ -252,7 +250,7 @@ public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
 
         tasks = tryFindResults(() -> searchTasks(taskSummary), 0);
 
-        assertFalse("Task was removed.", tasks.isEmpty());
+        assertFalse(tasks.isEmpty(), "Task was removed.");
     }
 
     @Test
@@ -267,7 +265,7 @@ public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
 
         tasks = tryFindResults(() -> searchTasks(taskSummary), 0);
 
-        assertFalse("Task was removed.", tasks.isEmpty());
+        assertFalse(tasks.isEmpty(), "Task was removed.");
     }
 
     @Test
@@ -285,7 +283,7 @@ public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
 
         assertEquals(3, indexedLogs.size());
 
-        assertTrue("Not all logs was indexed", indexedLogs.containsAll(logs));
+        assertTrue(indexedLogs.containsAll(logs), "Not all logs was indexed");
     }
 
     @Test
@@ -303,7 +301,7 @@ public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
 
         assertEquals(3, indexedLogs.size());
 
-        assertTrue("Not all logs was indexed", indexedLogs.containsAll(logs));
+        assertTrue(indexedLogs.containsAll(logs), "Not all logs was indexed");
     }
 
     @Test
@@ -320,8 +318,8 @@ public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
         assertEquals(2, indexedMessages.size());
 
         assertTrue(
-                "Not all messages was indexed",
-                indexedMessages.containsAll(Arrays.asList(message1, message2)));
+                indexedMessages.containsAll(Arrays.asList(message1, message2)),
+                "Not all messages was indexed");
     }
 
     @Test
@@ -339,8 +337,8 @@ public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
         assertEquals(2, indexedExecutions.size());
 
         assertTrue(
-                "Not all event executions was indexed",
-                indexedExecutions.containsAll(Arrays.asList(execution1, execution2)));
+                indexedExecutions.containsAll(Arrays.asList(execution1, execution2)),
+                "Not all event executions was indexed");
     }
 
     @Test
@@ -358,8 +356,8 @@ public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
         assertEquals(2, indexedExecutions.size());
 
         assertTrue(
-                "Not all event executions was indexed",
-                indexedExecutions.containsAll(Arrays.asList(execution1, execution2)));
+                indexedExecutions.containsAll(Arrays.asList(execution1, execution2)),
+                "Not all event executions was indexed");
     }
 
     @Test
@@ -396,7 +394,7 @@ public class TestElasticSearchRestDAOV7 extends ElasticSearchRestDaoBaseTest {
         List<String> ids = indexDAO.searchRecentRunningWorkflows(2, 1);
 
         assertEquals(1, ids.size());
-        assertEquals(recentWorkflow.getWorkflowId(), ids.get(0));
+        assertEquals(recentWorkflow.getWorkflowId(), ids.getFirst());
     }
 
     @Test
