@@ -14,6 +14,7 @@ package com.netflix.conductor.sdk.healthcheck;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 
 import com.fasterxml.jackson.databind.DeserializationFeature;
@@ -36,7 +37,7 @@ public class HealthCheckClient {
         try {
 
             BufferedReader in =
-                    new BufferedReader(new InputStreamReader(new URL(healthCheckURL).openStream()));
+                    new BufferedReader(new InputStreamReader(URI.create(healthCheckURL).toURL().openStream()));
             StringBuilder response = new StringBuilder();
             String inputLine;
             while ((inputLine = in.readLine()) != null) {
