@@ -151,8 +151,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
     @Override
     public Optional<WorkflowDef> getLatestWorkflowDef(String name) {
         final String GET_LATEST_WORKFLOW_DEF_QUERY =
-                "SELECT json_data FROM meta_workflow_def WHERE NAME = ? AND "
-                        + "version = latest_version";
+                """
+                SELECT json_data FROM meta_workflow_def WHERE NAME = ? AND \
+                version = latest_version\
+                """;
 
         return Optional.ofNullable(
                 queryWithTransaction(
@@ -187,8 +189,8 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
                             q -> {
                                 if (!q.addParameter(name).addParameter(version).executeDelete()) {
                                     throw new NotFoundException(
-                                            String.format(
-                                                    "No such workflow definition: %s version: %d",
+                                            
+                                                    "No such workflow definition: %s version: %d".formatted(
                                                     name, version));
                                 }
                             });
@@ -224,7 +226,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
 
     public List<WorkflowDef> getAllLatest() {
         final String GET_ALL_LATEST_WORKFLOW_DEF_QUERY =
-                "SELECT json_data FROM meta_workflow_def WHERE version = " + "latest_version";
+                """
+                SELECT json_data FROM meta_workflow_def WHERE version = \
+                latest_version\
+                """;
 
         return queryWithTransaction(
                 GET_ALL_LATEST_WORKFLOW_DEF_QUERY, q -> q.executeAndFetch(WorkflowDef.class));
@@ -232,7 +237,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
 
     public List<WorkflowDef> getAllVersions(String name) {
         final String GET_ALL_VERSIONS_WORKFLOW_DEF_QUERY =
-                "SELECT json_data FROM meta_workflow_def WHERE name = ? " + "ORDER BY version";
+                """
+                SELECT json_data FROM meta_workflow_def WHERE name = ? \
+                ORDER BY version\
+                """;
 
         return queryWithTransaction(
                 GET_ALL_VERSIONS_WORKFLOW_DEF_QUERY,
@@ -244,8 +252,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
         Preconditions.checkNotNull(eventHandler.getName(), "EventHandler name cannot be null");
 
         final String INSERT_EVENT_HANDLER_QUERY =
-                "INSERT INTO meta_event_handler (name, event, active, json_data) "
-                        + "VALUES (?, ?, ?, ?)";
+                """
+                INSERT INTO meta_event_handler (name, event, active, json_data) \
+                VALUES (?, ?, ?, ?)\
+                """;
 
         withTransaction(
                 tx -> {
@@ -274,9 +284,11 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
 
         // @formatter:off
         final String UPDATE_EVENT_HANDLER_QUERY =
-                "UPDATE meta_event_handler SET "
-                        + "event = ?, active = ?, json_data = ?, "
-                        + "modified_on = CURRENT_TIMESTAMP WHERE name = ?";
+                """
+                UPDATE meta_event_handler SET \
+                event = ?, active = ?, json_data = ?, \
+                modified_on = CURRENT_TIMESTAMP WHERE name = ?\
+                """;
         // @formatter:on
 
         withTransaction(
@@ -397,7 +409,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
      */
     private Boolean workflowExists(Connection connection, WorkflowDef def) {
         final String CHECK_WORKFLOW_DEF_EXISTS_QUERY =
-                "SELECT COUNT(*) FROM meta_workflow_def WHERE name = ? AND " + "version = ?";
+                """
+                SELECT COUNT(*) FROM meta_workflow_def WHERE name = ? AND \
+                version = ?\
+                """;
 
         return query(
                 connection,
@@ -415,7 +430,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
      */
     private Optional<Integer> getLatestVersion(Connection tx, String name) {
         final String GET_LATEST_WORKFLOW_DEF_VERSION =
-                "SELECT max(version) AS version FROM meta_workflow_def WHERE " + "name = ?";
+                """
+                SELECT max(version) AS version FROM meta_workflow_def WHERE \
+                name = ?\
+                """;
 
         Integer val =
                 query(
@@ -446,7 +464,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
      */
     private void updateLatestVersion(Connection tx, String name, int version) {
         final String UPDATE_WORKFLOW_DEF_LATEST_VERSION_QUERY =
-                "UPDATE meta_workflow_def SET latest_version = ? " + "WHERE name = ?";
+                """
+                UPDATE meta_workflow_def SET latest_version = ? \
+                WHERE name = ?\
+                """;
 
         execute(
                 tx,
@@ -456,7 +477,10 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
 
     private void insertOrUpdateWorkflowDef(Connection tx, WorkflowDef def) {
         final String INSERT_WORKFLOW_DEF_QUERY =
-                "INSERT INTO meta_workflow_def (name, version, json_data) VALUES (?," + " ?, ?)";
+                """
+                INSERT INTO meta_workflow_def (name, version, json_data) VALUES (?,\
+                 ?, ?)\
+                """;
 
         Optional<Integer> version = getLatestVersion(tx, def.getName());
         if (!workflowExists(tx, def)) {
@@ -471,9 +495,11 @@ public class PostgresMetadataDAO extends PostgresBaseDAO implements MetadataDAO,
         } else {
             // @formatter:off
             final String UPDATE_WORKFLOW_DEF_QUERY =
-                    "UPDATE meta_workflow_def "
-                            + "SET json_data = ?, modified_on = CURRENT_TIMESTAMP "
-                            + "WHERE name = ? AND version = ?";
+                    """
+                    UPDATE meta_workflow_def \
+                    SET json_data = ?, modified_on = CURRENT_TIMESTAMP \
+                    WHERE name = ? AND version = ?\
+                    """;
             // @formatter:on
 
             execute(
