@@ -12,6 +12,7 @@
  */
 package com.netflix.conductor.postgres.dao;
 
+import java.lang.reflect.Method;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
@@ -23,16 +24,13 @@ import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.builder.EqualsBuilder;
 import org.flywaydb.core.Flyway;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TestName;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInfo;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit4.SpringRunner;
 
 import com.netflix.conductor.common.config.TestObjectMapperConfiguration;
 import com.netflix.conductor.common.metadata.events.EventHandler;
@@ -41,11 +39,7 @@ import com.netflix.conductor.common.metadata.workflow.WorkflowDef;
 import com.netflix.conductor.core.exception.NonTransientException;
 import com.netflix.conductor.postgres.config.PostgresConfiguration;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertThrows;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 @ContextConfiguration(
         classes = {
@@ -53,19 +47,22 @@ import static org.junit.Assert.assertTrue;
             PostgresConfiguration.class,
             FlywayAutoConfiguration.class
         })
-@RunWith(SpringRunner.class)
 @SpringBootTest(properties = "spring.flyway.clean-disabled=false")
 public class PostgresMetadataDAOTest {
 
     @Autowired private PostgresMetadataDAO metadataDAO;
 
-    @Rule public TestName name = new TestName();
+     public String name;
 
     @Autowired Flyway flyway;
 
     // clean the database between tests.
-    @Before
-    public void before() {
+    @BeforeEach
+    public void before(TestInfo testInfo) {
+        Optional<Method> testMethod = testInfo.getTestMethod();
+        if (testMethod.isPresent()) {
+            this.name = testMethod.get().getName();
+        }
         flyway.migrate();
     }
 
@@ -110,8 +107,8 @@ public class PostgresMetadataDAOTest {
         List<WorkflowDef> all = metadataDAO.getAllWorkflowDefs();
         assertNotNull(all);
         assertEquals(1, all.size());
-        assertEquals("test", all.get(0).getName());
-        assertEquals(1, all.get(0).getVersion());
+        assertEquals("test", all.getFirst().getName());
+        assertEquals(1, all.getFirst().getVersion());
 
         WorkflowDef found = metadataDAO.getWorkflowDef("test", 1).get();
         assertTrue(EqualsBuilder.reflectionEquals(def, found));
@@ -122,8 +119,8 @@ public class PostgresMetadataDAOTest {
         all = metadataDAO.getAllWorkflowDefs();
         assertNotNull(all);
         assertEquals(2, all.size());
-        assertEquals("test", all.get(0).getName());
-        assertEquals(1, all.get(0).getVersion());
+        assertEquals("test", all.getFirst().getName());
+        assertEquals(1, all.getFirst().getVersion());
 
         found = metadataDAO.getLatestWorkflowDef(def.getName()).get();
         assertEquals(def.getName(), found.getName());
@@ -133,15 +130,15 @@ public class PostgresMetadataDAOTest {
         all = metadataDAO.getAllLatest();
         assertNotNull(all);
         assertEquals(1, all.size());
-        assertEquals("test", all.get(0).getName());
-        assertEquals(3, all.get(0).getVersion());
+        assertEquals("test", all.getFirst().getName());
+        assertEquals(3, all.getFirst().getVersion());
 
         all = metadataDAO.getAllVersions(def.getName());
         assertNotNull(all);
         assertEquals(2, all.size());
-        assertEquals("test", all.get(0).getName());
+        assertEquals("test", all.getFirst().getName());
         assertEquals("test", all.get(1).getName());
-        assertEquals(1, all.get(0).getVersion());
+        assertEquals(1, all.getFirst().getVersion());
         assertEquals(3, all.get(1).getVersion());
 
         def.setDescription("updated");
@@ -152,7 +149,7 @@ public class PostgresMetadataDAOTest {
         List<String> allnames = metadataDAO.findAll();
         assertNotNull(allnames);
         assertEquals(1, allnames.size());
-        assertEquals(def.getName(), allnames.get(0));
+        assertEquals(def.getName(), allnames.getFirst());
 
         def.setVersion(2);
         metadataDAO.createWorkflowDef(def);
@@ -216,7 +213,7 @@ public class PostgresMetadataDAOTest {
         Set<String> allnames = all.stream().map(TaskDef::getName).collect(Collectors.toSet());
         assertEquals(10, allnames.size());
         List<String> sorted = allnames.stream().sorted().collect(Collectors.toList());
-        assertEquals(def.getName(), sorted.get(0));
+        assertEquals(def.getName(), sorted.getFirst());
 
         for (int i = 0; i < 9; i++) {
             assertEquals(def.getName() + i, sorted.get(i + 1));
@@ -228,7 +225,7 @@ public class PostgresMetadataDAOTest {
         all = metadataDAO.getAllTaskDefs();
         assertNotNull(all);
         assertEquals(1, all.size());
-        assertEquals(def.getName(), all.get(0).getName());
+        assertEquals(def.getName(), all.getFirst().getName());
     }
 
     @Test
@@ -259,8 +256,8 @@ public class PostgresMetadataDAOTest {
         List<EventHandler> all = metadataDAO.getAllEventHandlers();
         assertNotNull(all);
         assertEquals(1, all.size());
-        assertEquals(eventHandler.getName(), all.get(0).getName());
-        assertEquals(eventHandler.getEvent(), all.get(0).getEvent());
+        assertEquals(eventHandler.getName(), all.getFirst().getName());
+        assertEquals(eventHandler.getEvent(), all.getFirst().getEvent());
 
         List<EventHandler> byEvents = metadataDAO.getEventHandlersForEvent(event1, true);
         assertNotNull(byEvents);
