@@ -103,6 +103,6 @@ public class RedisSentinelConfiguration extends JedisCommandsConfigurer {
     }
 
     private String getPassword(List<Host> hosts) {
-        return hosts.isEmpty() ? null : hosts.get(0).getPassword();
+        return hosts.isEmpty() ? null : hosts.getFirst().getPassword();
     }
 }
