@@ -14,11 +14,9 @@ package com.netflix.conductor.test.integration.grpc;
 
 import java.util.*;
 
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit4.SpringRunner;
 
 import com.netflix.conductor.ConductorTestApp;
 import com.netflix.conductor.client.grpc.EventClient;
@@ -41,11 +39,8 @@ import com.netflix.conductor.common.run.Workflow.WorkflowStatus;
 import com.netflix.conductor.common.run.WorkflowSummary;
 import com.netflix.conductor.test.integration.AbstractEndToEndTest;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
-@RunWith(SpringRunner.class)
 @SpringBootTest(
         classes = ConductorTestApp.class,
         properties = {"conductor.grpc-server.enabled=true", "conductor.grpc-server.port=8092"})
@@ -149,7 +144,7 @@ public abstract class AbstractGrpcEndToEndTest extends AbstractEndToEndTest {
                 workflowClient.getRunningWorkflow(def.getName(), def.getVersion());
         assertNotNull(runningIds);
         assertEquals(1, runningIds.size());
-        assertEquals(workflowId, runningIds.get(0));
+        assertEquals(workflowId, runningIds.getFirst());
 
         List<Task> polled =
                 taskClient.batchPollTasksByTaskType("non existing task", "test", 1, 100);
@@ -159,8 +154,8 @@ public abstract class AbstractGrpcEndToEndTest extends AbstractEndToEndTest {
         polled = taskClient.batchPollTasksByTaskType(t0.getName(), "test", 1, 100);
         assertNotNull(polled);
         assertEquals(1, polled.size());
-        assertEquals(t0.getName(), polled.get(0).getTaskDefName());
-        Task task = polled.get(0);
+        assertEquals(t0.getName(), polled.getFirst().getTaskDefName());
+        Task task = polled.getFirst();
 
         task.getOutputData().put("key1", "value1");
         task.setStatus(Status.COMPLETED);
@@ -168,7 +163,7 @@ public abstract class AbstractGrpcEndToEndTest extends AbstractEndToEndTest {
 
         polled = taskClient.batchPollTasksByTaskType(t0.getName(), "test", 1, 100);
         assertNotNull(polled);
-        assertTrue(polled.toString(), polled.isEmpty());
+        assertTrue(polled.isEmpty(), polled.toString());
 
         workflow = workflowClient.getWorkflow(workflowId, true);
         assertNotNull(workflow);
